# weave

./: README.md  RUN_TESTS.md  Taskfile.yml  __init__.py  auth_server.py  claude_config.py  cli.py  pyproject.toml  test_runner.py
.claude/: settings.local.json
tests/: README.md  __init__.py  conftest.py  utils.py
tests/fixtures/: __init__.py  mocks.py  test_data.py
tests/integration/: __init__.py  test_e2e.py
tests/unit/: __init__.py  test_auth.py  test_config.py  test_proxy.py
weave/: __init__.py  __main__.py  api_client.py  auth_server.py  claude_config.py  cli.py  config.py  mcp_proxy.py  proxy_server.py  utils.py
