[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "weave"
version = "0.1.0"
description = "Setup agent for automatically configuring Claude Desktop with WeaveMCP virtual servers"
authors = [{name = "WeaveMCP", email = "support@weavemcp.dev"}]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "click>=8.0.0",
    "requests>=2.25.0",
    "fastmcp>=2.0.0",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

[project.optional-dependencies]
test = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-mock>=3.10.0",
    "responses>=0.23.0",
    "httpx>=0.24.0",
]

[project.urls]
Homepage = "https://github.com/weavemcp/weavemcp"
Repository = "https://github.com/weavemcp/weavemcp"
Documentation = "https://docs.weavemcp.dev"

[project.scripts]
weave = "weave.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["weave"]

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra -q --tb=short"
testpaths = ["tests"]
asyncio_mode = "auto"
markers = [
    "integration: marks tests as integration tests (may require network)",
    "unit: marks tests as unit tests (isolated, no network)",
    "slow: marks tests as slow running",
]
